# sageLLM

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODE_REVIEW_REPORT.md  DEVELOPMENT.md  LICENSE  README.md  RESTRUCTURE_CHANGELOG.md  STRUCTURE.md  SUBMODULE.md  TASK6_COMPLETION.md  TASK_STATUS.md  __init__.py  config.py  engine.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  setup-dev.sh  setup.py
.githooks/: post-checkout
.github/workflows/: ci.yml
accel/: __init__.py  protocols.py  types.py
accel/cost_model/: __init__.py  estimator.py
accel/quantize/: __init__.py  base.py  fp8.py  int4.py  mixed_precision.py
accel/sparsity/: __init__.py  structured.py
backends/: __init__.py  base.py  protocols.py  registry.py
backends/ascend/: __init__.py  backend.py
backends/cambricon/: __init__.py  backend.py
backends/cuda/: __init__.py  backend.py
backends/hygon/: __init__.py  backend.py
benchmarks/: __init__.py  types.py
benchmarks/metrics/: __init__.py  kv_cache.py  latency.py  memory.py  mfu.py  throughput.py
benchmarks/multi_model/: config.py  main.py  types.py
benchmarks/multi_model/entities/: __init__.py  request.py
benchmarks/multi_model/request_generator/: __init__.py  base_request_generator.py  base_request_interval_generator.py  base_request_length_generator.py  fixed_request_length_generator.py  gamma_request_interval_generator.py  poisson_request_interval_generator.py  request_generator_registry.py  request_interval_generator_registry.py  request_length_generator_registry.py  static_request_interval_generator.py  synthetic_request_generator.py  trace_request_generator.py  trace_request_interval_generator.py  trace_request_length_generator.py  uniform_request_length_generator.py  zipf_request_length_generator.py
benchmarks/multi_model/utils/: base_registry.py
benchmarks/profiler/: __init__.py  trace.py
benchmarks/reporters/: __init__.py  console.py  json_reporter.py
control_plane/: INTEGRATION.md  README.md  ThreadedEngine.py  __init__.py  autoscaler.py  engine_lifecycle.py  example.py  example_autoscaling.py  example_http_client.py  executor.py  gpu_manager.py  load_predictor.py  manager.py  metrics_collector.py  monitoring.py  parallelism.py  pd_routing.py  performance_interpolator.py  policies.py  request_classifier.py  router.py  test_integration.py  topology.py  types.py
control_plane/examples/: README.md  __init__.py  demo_control_plane.py  example_http_client.py  example_local_async.py
control_plane/executors/: __init__.py  base.py  embedding_executor.py  http_client.py  local_async.py
control_plane/strategies/: README.md  __init__.py  adaptive.py  aegaeon.py  base.py  cost_optimized.py  fifo.py  hybrid_policy.py  priority.py  slo_aware.py
control_plane/utils/: __init__.py  prometheus_client.py
core/: __init__.py  config.py  manager.py  types.py
dev-notes/: AEGAEON_IMPLEMENTATION.md  AUTOSCALING.md  CI_CD_IMPLEMENTATION.md  CUSTOM_SCHEDULING.md  DEPLOYMENT.md  DEVELOPMENT.md  FAULT_TOLERANCE.md  INTEGRATION.md  METRICS.md  TOPOLOGY.md
dev-notes/tasks/: README.md  task1-runtime-execution-graph.md  task2-kv-runtime-enhancement.md  task3-accel-compression.md  task4-backends-hardware.md  task4-completion-report.md  task5-benchmarks-framework.md  task6-integration-validation.md
docs/: CUSTOM_SCHEDULING.md  DEPLOYMENT.md  FAULT_TOLERANCE.md  INTEGRATION.md  METRICS.md  TOPOLOGY.md
examples/: __init__.py  basic_inference.py
kv_policy/: __init__.py
kv_runtime/: __init__.py  protocols.py  types.py
kv_runtime/blocks/: __init__.py  multi_granular.py
kv_runtime/hierarchy/: __init__.py  tiered_storage.py
kv_runtime/migration/: __init__.py  hot_cold.py
kv_runtime/reuse/: __init__.py  cross_request.py
prefix_reuse/: __init__.py
runtime/: __init__.py
runtime/comm/: __init__.py  collective.py  protocols.py  topology.py
runtime/execution_graph/: __init__.py  builder.py  ir.py  optimizer.py
runtime/scheduler/: __init__.py  base.py  pd_scheduler.py
tests/: README.md  standalone_test_backends.py  test_unified_api_server.py
tests/control_plane/: README.md  __init__.py  conftest.py  pytest.ini  test_aegaeon.py  test_autoscaler.py  test_embedding_executor.py  test_executor.py  test_fault_tolerance.py  test_hybrid_policy.py  test_integration.py  test_manager_extended.py  test_monitoring.py  test_parallelism.py  test_pd_separation.py  test_request_classifier.py  test_router.py  test_scheduling.py  test_strategies.py  test_topology.py  test_types.py
tests/examples/: __init__.py  minimal_demo.py
tests/integration/: __init__.py  test_engine.py
tests/kernels/attention/: test_cascade_flash_attn.py
tests/unit/: __init__.py  test_accel_types.py  test_backends.py  test_core_config.py  test_core_types.py  test_kv_runtime_multi_granular.py  test_kv_runtime_types.py  test_runtime_execution_graph.py
third_party_engines/: __init__.py  base.py  types.py
third_party_engines/lmdeploy/: __init__.py  engine.py  kv_manager.py  scheduler.py
third_party_engines/vllm/: __init__.py
third_party_engines/vllm_ascend/: __init__.py
vendors/: README.md
vendors/vllm/: .gitignore  README.md
vendors/vllm/benchmarks/: backend_request_func.py  benchmark_block_pool.py  benchmark_ngram_proposer.py  benchmark_prefix_caching.py  benchmark_prioritization.py  benchmark_serving_structured_output.py
vendors/vllm/tests/: conftest.py  test_config.py  test_envs.py  test_inputs.py  test_logger.py  test_outputs.py  test_pooling_params.py  test_regression.py  test_routing_simulator.py  test_scalartype.py  test_seed_behavior.py  test_sequence.py  test_triton_utils.py  test_version.py  test_vllm_port.py  utils.py
vendors/vllm/vllm/: __init__.py  _custom_ops.py  (+12 more)
vllm/control_plane/: 00_DELIVERY_CHECKLIST.md  DESIGN.md  DESIGN_OVERVIEW.md  DESIGN_SUMMARY_CN.md  INDEX.md  PD_SEPARATION_DESIGN.md  PD_SEPARATION_EXAMPLE.md  QUICKSTART.md  README.md  __init__.py  example.py  executor.py  manager.py  parallelism.py  pd_routing.py  policies.py  router.py  types.py
vllm/multimodal/: parse.py
(+1295 files in other folders)
