[build-system]
requires = ["setuptools>=64", "wheel", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sage-control-plane"
version = "0.1.0"
description = "SAGE Control Plane for vLLM Orchestration - High-performance request scheduling and routing"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "SAGE Team", email = "info@sage-ai.org" },
]
keywords = [
    "sage",
    "vllm",
    "llm",
    "control-plane",
    "orchestration",
    "scheduling",
    "routing",
    "load-balancing",
    "ai",
    "machine-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "License :: OSI Approved :: Apache Software License",
]
license = {text = "Apache License 2.0"}

# Core dependencies
dependencies = [
    "vllm>=0.4.0,<1.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.5.0",
    "aioresponses>=0.7.6",
    "tblib>=1.7.0",
]

# Testing dependencies (minimal set for CI)
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.1.0",
    "aioresponses>=0.7.6",
]

# Code quality tools
quality = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

# Documentation
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

# Full installation (all optional dependencies)
all = [
    "sage-control-plane[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/intellistream/SAGE"
Documentation = "https://intellistream.github.io/SAGE-Pub/"
Repository = "https://github.com/intellistream/SAGE.git"
"Bug Tracker" = "https://github.com/intellistream/SAGE/issues"
"Source Code" = "https://github.com/intellistream/SAGE/tree/main/packages/sage-common/src/sage/common/components/sage_llm/sageLLM"

[tool.setuptools.packages.find]
where = ["."]
include = ["control_plane*"]

[tool.setuptools.package-data]
control_plane = ["py.typed"]

# ============================================================================
# Testing Configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-ra",
]
markers = [
    "asyncio: marks tests as async (auto-enabled with pytest-asyncio)",
    "control_plane: marks tests as control plane tests",
    "integration: marks tests as integration tests",
    "scheduling: marks tests as scheduling tests",
    "pd_separation: marks tests as prefilling/decoding separation tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_file = "pytest.log"
log_file_level = "DEBUG"
timeout = 300
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["control_plane"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/_test_*.py",
    "*/conftest.py",
    "*/vendors/*",
]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ============================================================================
# Code Quality Configuration
# ============================================================================
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | vendors
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["control_plane"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    ".tox",
    "build",
    "dist",
    "vendors",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",  # raise from
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*.py" = ["F401", "F403", "F811"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pyright]
include = ["control_plane", "tests"]
exclude = [
    "vendors",
    "**/__pycache__",
    "**/.pytest_cache",
    "**/build"
]
pythonVersion = "3.11"
pythonPlatform = "Linux"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
# 允许动态导入和可选依赖
reportOptionalMemberAccess = false
reportOptionalCall = false
reportOptionalSubscript = false
reportOptionalIterable = false
reportOptionalContextManager = false
reportOptionalOperand = false
reportGeneralTypeIssues = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
# 测试文件特殊处理
reportPrivateUsage = false
stubPath = ""
venvPath = "."
